# GO-IT-ContactProject

./: .gitignore  README.md  pyproject.toml  requirements.txt
basic_project/basic_project/: settings.py  urls.py  views.py
basic_project/basic_project/templates/: base 1.html  base.html  error.html  index.html
basic_project/contact_app/: forms.py  messages.py  models.py  tests.py  urls.py  views.py
basic_project/contact_app/migrations/: 0001_initial.py  0002_alter_contact_address_alter_contact_email_and_more.py  0002_note_app_add_colornote.py  0003_merge_20250625_1620.py  0004_add_user_contacts.py
basic_project/docs/: conf.py  notes.rst  users.rst
basic_project/docs/_autosummary/: note_app.views.count_top_tags.rst  note_app.views.edit_tag.rst  note_app.views.get_notes_on_page.rst  note_app.views.note.rst  note_app.views.update_note_color.rst
basic_project/file_app/: admin.py  apps.py  file_list.html  firebase.py  firebase_utils.py  forms.py  models.py  setting.py  settings.py  tests.py  urls.py  views.py
basic_project/file_app/migrations/: 0001_initial.py  0001_note_app_add_colornote.py
basic_project/note_app/: admin.py  forms.py  models.py  urls.py  views.py  viktor-notes.md  viktor-todo.md
basic_project/note_app/.archive-tries/: demo 1.html  demo 2.html  demo 3.html  demo 4.html  note 1.html  note 2.html  note_section 1.html
basic_project/note_app/migrations/: 0001_note_app_1.py  0002_note_app_add_colornote.py  (+1 more)
basic_project/scraping_app/: admin.py  currency_fetcher.py  models.py  urls.py  views.py
basic_project/users/: forms.py  urls.py  views.py
(+103 files in other folders)
