[project]
name = "Personal_Assistant"
version = "0.1.0"
description = "Final project of group #6"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "None"}
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
